--- a/frontend/scss/main.scss
+++ b/frontend/scss/main.scss
@@ -1,9 +1,9 @@
 
 $homepageColor:#e3d1df6e;
 
-.main, .homepage {
-    height: 100vh;
-    width: 100%;
-    background: $homepageColor;
-    clip-path: polygon(0 0, 100% 0, 100% 70%, 0 100%);
-}
+// .main, .homepage {
+//     height: 100vh;
+//     width: 100%;
+//     background: $homepageColor;
+//     clip-path: polygon(0 0, 100% 0, 100% 70%, 0 100%);
+// }
